--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
   pointer-events: none;
 }
 
-.App-header {
+.App-body {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,4 +30,19 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Navigation {
+    background-color: #ffffff;
+    min-height: 10vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+}
+
+.Navigation-item {
+    margin: 2vw;
 }
